package NNeuralNetApplier;

message TRepeatedFieldEntryProto {
    optional bytes Key = 1;
    repeated bytes Values = 2;
}

message TRepeatedFieldProto {
    repeated TRepeatedFieldEntryProto Entries = 1;
}
